<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbg" >  <TextView
      android:id="@+id/txtuserinfog"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="52dp"
      android:text="@string/markertap"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textSize="18sp" />

  <com.google.android.maps.MapView
      android:id="@+id/map"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/txtuserinfog"
      android:layout_above="@+id/mapcallingbar"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="10dp"
      android:apiKey="0AAYvspcV1JKBOEW8PXi-6x2lmrWz0GZO7fv7oA"
      android:clickable="true" >
  </com.google.android.maps.MapView>

  <LinearLayout
      android:id="@+id/mapcallingbar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="10dp"
      android:baselineAligned="true"
      android:orientation="horizontal" >

      <Button
          android:id="@+id/btncall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="10dp"
          android:background="@drawable/button"
          android:padding="13dp"
          android:text="@string/callbtn" />

      <Button
          android:id="@+id/btnsms"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="13dp"
          android:text="@string/smsbtn" android:background="@drawable/smsbtn"/>

      <Button
          android:id="@+id/btnchat"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginLeft="10dp"
          android:background="@drawable/chatbtn"
          android:padding="13dp"
          android:text="@string/chatbtn" />

  </LinearLayout>

</RelativeLayout>