<?xml version="1.0" encoding="utf-8"?>     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"        android:layout_height="match_parent"        android:layout_width="match_parent"        android:scrollbars="vertical">        	<LinearLayout    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:background="@drawable/loginbg"    android:orientation="vertical" >    <EditText        android:id="@+id/txt_username"        android:layout_width="190dp"        android:layout_height="wrap_content"        android:layout_gravity="center_horizontal"        android:layout_marginTop="250dp"        android:background="@drawable/textstyle"        android:hint="@string/Usernamehint"        android:inputType="text"        android:paddingBottom="6dp"        android:paddingLeft="30dp"        android:paddingRight="30dp"        android:paddingTop="6dp"        android:textColorHint="#545454"        android:textSize="14sp" >       
    </EditText>
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/textstyle"
        android:hint="@string/passwordhint"
        android:inputType="text|textPassword"
        android:textColorHint="#545454" android:paddingLeft="30dp" android:paddingBottom="6dp" android:paddingRight="30dp" android:paddingTop="6dp" android:textSize="14sp"/>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_login"
            android:text="@string/btnlogin"
            android:textColor="#3b4e11"
            android:textSize="14sp"
            android:textStyle="bold" android:background="@drawable/button" android:layout_width="78dp" android:paddingBottom="6dp" android:paddingTop="6dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button"
            android:text="@string/btnregister"
            android:textColor="#3b4e11"
            android:textSize="14sp"
            android:textStyle="bold"             android:layout_width="78dp"             android:paddingTop="6dp"             android:paddingBottom="6dp"/>

    </TableRow>    </LinearLayout>    </ScrollView>